# Python-for-ROS

./: README.md
ros2_ws/install/python_basics_project/lib/python_basics_project/: robot_interface
ros2_ws/install/python_basics_project/share/python_basics_project/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/python_basics_project/: package.xml  setup.cfg  setup.py
ros2_ws/src/python_basics_project/python_basics_project/: robot_control_classed.py  robot_control_noclass.py  robot_interface.py
simulation_ws/install/fastbot_realrobot/share/fastbot_realrobot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/fastbot_realrobot/share/fastbot_realrobot/cmake/: fastbot_realrobotConfig.cmake
simulation_ws/install/fastbot_realrobot/share/fastbot_realrobot/launch/: main_fastbot_lab.launch.xml
simulation_ws/install/turtlebot3_gazebo/share/turtlebot3_gazebo/launch/: main_turtlebot3_lab.launch.xml  rviz.launch.py
simulation_ws/install/turtlebot3_gazebo/share/turtlebot3_gazebo/rviz/: tb3_burger.rviz
simulation_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/: Cargo.toml
simulation_ws/install/turtlebot3_realrobot/share/turtlebot3_realrobot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/src/fastbot_realrobot/: CMakeLists.txt  package.xml
simulation_ws/src/fastbot_realrobot/launch/: rviz.launch.py
simulation_ws/src/fastbot_realrobot/rviz/: fastbot.rviz
(+6 files in other folders)
